fixed fonts being large on mobile devices

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -45,14 +45,24 @@ textarea {
 z-index: 10;
 }
 
-/* Med devices */
+
+/* Small-Medium devices */
+@media screen and (max-width: 992px) { 
+  body {
+    font-size: 1.3rem !important;
+    line-height: 1.6 !important;
+  }
+}
+
+
+/* Medium devices */
 @media screen and (min-width: 0px) { 
 .overlap {
   margin-top: -30%;
   background-color: white;
   position: relative;;
   z-index:1;
-}
+  }
 }
 
 /* Large devices */
